--- a/MinimumOverlay/viewerbutton.html
+++ b/MinimumOverlay/viewerbutton.html
@@ -37,5 +37,10 @@
   <img src="arrow-down-solid.svg" id="downarrow" width="100" height="100"></img>
 </div>
 <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
+<script
+  src="https://code.jquery.com/jquery-3.4.1.js"
+  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous"></script>
+<script src="viewer.js" type="text/javascript"></script>
 </body>
 </html>
