--- a/flask/index.html
+++ b/flask/index.html
@@ -13,8 +13,8 @@
             <img class="arrow" onclick="move_request('up');add_arrow('up')" src="static/up-arrow.svg" id="uparrow}}" width="100" height="100"></img>
             <img class="arrow" onclick="move_request('right');add_arrow('right')" src="static/right-arrow.svg" id="rightarrow}}" width="100" height="100"></img>
         </div>
-        <div id ="actionqueue">
-        </div>
+        <div id ="actionqueue"></div>
+        <button type="button" id="undo" onclick="undo()">Undo</button>
         <script type="text/javascript" src="static/arrow.js"></script>
     </body>
 </html>
