Finished submit button

--- a/flask/index.html
+++ b/flask/index.html
@@ -15,6 +15,7 @@
         </div>
         <div id ="actionqueue"></div>
         <button type="button" id="undo" onclick="undo()">Undo</button>
+        <button type="button" id="submit" onclick="submit()">Submit</button>
         <script type="text/javascript" src="static/arrow.js"></script>
     </body>
 </html>
