--- a/flask/index.html
+++ b/flask/index.html
@@ -7,7 +7,7 @@
         <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
         <script type="text/javascript" src="static/arrow.js"></script>
     </head>
-    <body>
+    <body onload="register()">
         <div id="arrowholder">
             <img class="arrow" onclick="add_arrow('left')" src="static/left-arrow.svg" id="leftarrow" width="100" height="100"></img>
             <img class="arrow" onclick="add_arrow('down')" src="static/down-arrow.svg" id="downarrow" width="100" height="100"></img>
