integrated minimap with unity

--- a/flask/index.html
+++ b/flask/index.html
@@ -5,6 +5,8 @@
         <title>ProjAspect Overlay</title>
         <link rel="stylesheet" href="static/server.css" type="text/css"> 
         <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
+        <script type="text/javascript" src="static/twitch.js"></script>
+        <script type="text/javascript" src="static/map.js"></script>
         <script type="text/javascript" src="static/arrow.js"></script>
     </head>
     <body onload="register()">
