--- a/flask/index.html
+++ b/flask/index.html
@@ -10,7 +10,7 @@
         <script type="text/javascript" src="static/arrow.js"></script>
     </head>
     <body onload="register()">
-        <div id="minimap"><button onclick="run_map()">Click for Example Map</button></div>
+        <div id="minimap"></div>
         <div id="arrowholder">
             <img class="arrow" onclick="add_arrow('left')" src="static/left-arrow.svg" id="leftarrow" width="100" height="100"></img>
             <img class="arrow" onclick="add_arrow('down')" src="static/down-arrow.svg" id="downarrow" width="100" height="100"></img>
