--- a/flask/index.html
+++ b/flask/index.html
@@ -19,7 +19,7 @@
             <img class="arrow" onclick="add_arrow('right')" src="static/right-arrow.svg" id="rightarrow" width="100" height="100"></img>
         </div>
         <div id ="actionqueue"></div>
-        <button type="button" id="undo" onclick="undo()" onmouseover="valid_undo()">Undo</button>
-        <button type="button" id="submit" onclick="submit()" onmouseover="valid_submit()">Submit</button>
+        <button type="button" id="undo" onclick="undo()" onmouseover="validUndo()">Undo</button>
+        <button type="button" id="submit" onclick="submit()" onmouseover="validSubmit()">Submit</button>
     </body>
 </html>
